# projects

./: CMakeLists.txt
ATM/: ATM.cpp  ATM.h  main.cpp
Basic/ATM/: ATM.cpp  ATM.h
Basic/Login/: UserManagement.cpp  main.cpp
Basic/Student/: Student.cpp  Student.h  StudentManagement.cpp  StudentManagement.h  main.cpp
Login/: User.cpp  User.h  UserManagement.h
OpenCV/Face Tracking/: CMakeLists.txt  FaceTracking.cpp
OpenCV/Finding Waldo/: CMakeLists.txt  FindingWaldo.cpp
